[metadata]
name = permutation
version = attr:permutation.__version__
description = Permutations of finitely many positive integers
long_description = file:README.rst
long_description_content_type = text/x-rst
author = John Thorvald Wodder II
author_email = permutation@varonathe.org
license = MIT
license_files = LICENSE
url = https://github.com/jwodder/permutation

keywords =
    permutation
    math
    maths
    mathematics
    symmetric group
    group theory

classifiers =
    Development Status :: 4 - Beta
    #Development Status :: 5 - Production/Stable
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    License :: OSI Approved :: MIT License
    Intended Audience :: Developers
    Topic :: Scientific/Engineering :: Mathematics
    Typing :: Typed

project_urls =
    Source Code = https://github.com/jwodder/permutation
    Bug Tracker = https://github.com/jwodder/permutation/issues
    Documentation = https://permutation.readthedocs.io

[options]
packages = find:
package_dir =
    =src
include_package_data = True
python_requires = ~=3.6

[options.packages.find]
where = src

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True
local_partial_types = True
no_implicit_reexport = True
strict_equality = True
show_error_codes = True
show_traceback = True
pretty = True
